--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,21 +62,14 @@ jobs:
           echo "$RELEASE_NOTES" >> "$GITHUB_OUTPUT"
           echo "EOF" >> "$GITHUB_OUTPUT"
 
-      - name: Create GitHub Release
-        id: create_github_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create or Update GitHub Release and Upload Assets
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          name: Release ${{ github.ref }}
           body: ${{ steps.get_release_notes.outputs.release_notes }}
           draft: false
           prerelease: ${{ contains(github.ref, '-beta') || contains(github.ref, '-rc') }}
-
-      - name: Upload Release Asset
-        uses: softprops/action-gh-release@v2
-        with:
           files: |
             ./dist/*.whl
             ./dist/*.tar.gz
