fix: update smithery.yaml for cli args

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -5,14 +5,13 @@ startCommand:
   commandFunction:
     # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
-    (config) => ({ command: 'open-data-mcp', args: ['--data-portal-api-key', config.dataPortalApiKey], env: {} })
+    (config) => ({ command: 'open-data-mcp', args: ['--service-key', config.DataPortalApiKey], env: {} })
   configSchema:
-    # JSON Schema defining the configuration options for the MCP.
     type: object
     required:
-      - dataPortalApiKey
+      - DataPortalApiKey
     properties:
-      dataPortalApiKey:
+      DataPortalApiKey:
         type: string
         description: 공공데이터포털 API 키
   exampleConfig:
