--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,11 +1,11 @@
 # Smithery configuration file: https://smithery.ai/docs/build/project-config
 
 startCommand:
-  type: stdio
+  type: http
   commandFunction:
     # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
-    (config) => ({ command: 'open-data-mcp', args: ['--service-key', config.DataPortalApiKey], env: {} })
+    (config) => ({ command: 'open-data-mcp', args: ['--transport', 'http', '--service-key', config.DataPortalApiKey], env: {} })
   configSchema:
     type: object
     required:
@@ -15,4 +15,4 @@ startCommand:
         type: string
         description: 공공데이터포털 API 키
   exampleConfig:
-    dataPortalApiKey: YOUR_PUBLIC_DATA_PORTAL_API_KEY_HERE
+    DataPortalApiKey: YOUR_PUBLIC_DATA_PORTAL_API_KEY_HERE
