Update version to 0.1.7 and adjust CLI arguments in smithery.yaml

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -5,7 +5,7 @@ startCommand:
   commandFunction:
     # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
-    (config) => ({ command: 'open-data-mcp', args: ['--transport', 'http', '--host', '127.0.0.1', '--port', '80', '--service-key', config.dataPortalApiKey], env: {} })
+    (config) => ({ command: 'open-data-mcp', args: ['--transport', 'http', '--service-key', config.dataPortalApiKey], env: {} })
 
   configSchema:
     # JSON Schema defining the configuration options for the MCP.
@@ -17,4 +17,4 @@ startCommand:
         type: string
         description: 공공데이터포털 API 키
   exampleConfig:
-    DataPortalApiKey: YOUR_PUBLIC_DATA_PORTAL_API_KEY_HERE
+    dataPortalApiKey: YOUR_PUBLIC_DATA_PORTAL_API_KEY_HERE
