Refactor Dockerfile and configuration files for improved setup and functionality
- Updated Dockerfile to use a pre-built Python image with uv installed, streamlined the build process, and adjusted the entrypoint command.
- Modified smithery.yaml to enhance configuration structure, changing the service key to ODP_SERVICE_KEY for clarity.
- Updated version to 0.1.8 in uv.lock and adjusted the Settings class in config.py to reflect the new service key naming convention.
- Enhanced the call_openapi_endpoint function to utilize the new service key structure for authentication.

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,23 +1,10 @@
 startCommand:
-  type: http
-  commandFunction: |
-    (config) => ({
-      command: 'open-data-mcp',
-      args: [
-        '--transport', 'http',
-        '--service-key', config.serviceKey
-      ],
-      env: {}
-    })
-
-configSchema:
-  type: object
-  required:
-    - serviceKey
-  properties:
-    serviceKey:
-      type: string
-      description: 공공데이터포털 연결을 위한 서비스 키
-
-exampleConfig:
-  serviceKey: "YOUR_SERVICE_KEY_HERE"
+    type: http
+    configSchema:
+      type: object
+      required: ["ODP_SERVICE_KEY"]
+      properties:
+        ODP_SERVICE_KEY:
+          type: string
+          title: "Open Data Portal Service Key"
+          description: "Open Data Portal Service key for authentication."
