--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
 	"module": "./src/index.ts",
 	"type": "module",
 	"scripts": {
-		"dev": "npx @smithery/cli dev"
+		"dev": "npx @smithery/cli dev",
+		"typecheck": "tsc --noEmit"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@modelcontextprotocol/sdk": "^1.12.1",
-		"zod": "^3.25.46"
+		"@modelcontextprotocol/sdk": "^1.17.3",
+		"zod": "^3.25.76"
 	},
 	"devDependencies": {
 		"@smithery/cli": "^1.2.4",
-		"tsx": "^4.19.4"
+		"@types/node": "20.19.11",
+		"tsx": "^4.19.4",
+		"typescript": "^5.6.3"
 	}
 }
