--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "target": "ES2022",
-        "module": "ES2022",
-        "moduleResolution": "bundler",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
         "outDir": "build",
         "rootDir": "src",
         "strict": true,
@@ -10,6 +10,10 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
+        "typeRoots": [
+            "./node_modules/@types",
+            "./node_modules"
+        ],
         "types": [
             "node"
         ]
