--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "open-data-mcp",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "",
 	"main": "index.js",
 	"module": "./src/index.ts",
@@ -14,6 +14,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "^1.17.3",
+		"winston": "^3.17.0",
 		"zod": "^3.25.76"
 	},
 	"devDependencies": {
